# LIBRARY-BPMN_Graph_Transformation

./: .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  container-log.txt  dev_run_pipeline.py  main.py  output_bpmn (1).json  output_queries.cql  pyproject.toml  requirements.txt  test_dispatcher.py  test_graph.py
.github/workflows/: sync-to-gitlab.yml
app/api/graph/: bpmn_controller.py  health_controller.py  post_controller.py  query_controller.py  routes.py
app/core/libraries/: graph_converter.py
app/core/repositories/: post_repository.py
app/core/schemas/: post_schema.py
app/core/services/: bpmn_services.py  post_service.py  query_service.py
app/core/transformers/: edges.py  graph_transformer.py
app/infrastructure/db/: mongo_client.py
data/: bpmn_parse_output_20250602_163533.json  bpmn_parse_output_20250602_163533.txt  bpmn_parse_output_20250602_163604.json  bpmn_parse_output_20250602_163604.txt  bpmn_parse_output_20250602_163637.json  bpmn_parse_output_20250602_163637.txt  bpmn_parse_output_20250602_164152.txt  bpmn_parse_output_20250602_164255.txt  bpmn_parse_output_20250609_184311.json  bpmn_parse_output_20250626_172150.json  bpmn_parse_output_20250626_172150.txt  bpmn_parse_output_INVALID.json  invalid_bpmn_for_autofix_test.json  output_standardized (1).json  response.json
documentations/: bpmn_services.md  data.md  graph-transformer.md  json-parser.md  neo4j-executor.md  run-pipeline.md  validators.md
output/: output.cypher
src/bpmn_graph_transformation.egg-info/: PKG-INFO  SOURCES.txt
src/bpmn_mp/: dispatcher.py
src/bpmn_mp/parsers/: dispatcher.py
src/bpmn_mp/parsers/bpmn_parser/: helper.py  parser.py
src/bpmn_mp/parsers/native_parser/: helper.py  parser.py
src/bpmn_mp/parsers/vdx_parser/: parser.py
src/bpmn_mp/parsers/xml_parser/: parser.py
src/bpmn_mp/parsers/xpdl_parser/: helper.py  parser.py
src/bpmn_mp/repositories/parsers_repository/: bpmn_repository.py  native_repository.py  xml_repository.py  xpdl_repository.py
src/bpmn_neo4j/parsers/: parser_factory.py
src/bpmn_neo4j/transformers/: edges.py  graph_transformer.py  nodes.py  pool_lanes.py  transform_input_elements.py
src/bpmn_neo4j/validators/: bpmn_schema.json  bpmn_semantic_validator.py  schema_validator.py
src/bpmn_neo4j_lib.egg-info/: PKG-INFO  SOURCES.txt
tests/: EVALUATION_TESTS_README.md  test_dispatcher.py  test_evaluation_e2e.py  test_evaluation_performance.py  test_evaluation_regression.py  test_evaluation_transformation.py  test_evaluation_validation.py  test_graph.py
tests/test_parsers/: test_bpmn_parser.py  test_dispatcher.py  test_xdpl_parser.py  test_xml_parser.py
tests/test_parsers/samples/: Diagram 1.xpdl  Model2.bpm  Model2.xml  MyDiagram1.bpmn  diagram4.bpmn  diagram_2.xml  diagram_3.bpmn  diagram_3.xml  output_bpm.json  output_bpmn.json  output_bpmn2.json  output_bpmn3.json  output_bpmn4.json  output_bpmn5.json  output_vdx.json  output_xml.json  output_xpdl.json  random.txt  risetTA.drawio.xml
tests/test_parsers/samples/Model2/: Diagram 1.bpmn
tests/test_parsers/samples/Model2_1/: Diagram 1.xpdl
validators/: schema_validator.py
