[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bpmn-neo4j-lib"
version = "0.1.0"
description = "Library untuk mengubah BPMN JSON menjadi Cypher queries untuk Neo4j"
authors = [
  { name = "Izzat Aji Androfaza", email = "business.aji2022@gmail.com" }
  { name = "Lalu Aldo Wadagraprana", email = "lalualdo@gmail.com" }
]
]
requires-python = ">=3.8"
license = "MIT"
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]


# runtime dependencies
dependencies = [
  "lxml>=5",
  "xmltodict>=0.13",
  "jsonschema>=4.0.0",
  "neo4j>=5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "flake8>=7.0.0",
  "black>=24.0.0",
  "isort>=5.0.0",
  "mypy>=1.9.0",
  "mongomock>=4.1.2",
]
server = [
  "Flask==2.3.2",
  "gunicorn>=22.0.0",
  "uvicorn>=0.29.0",
  "pymongo>=4.5.0",
  "dnspython>=2.3.0",
  "python-dotenv>=1.0.0",
]

# Tambahkan CLI
[project.scripts]
bgt = "bgt.cli:main"

# Entry points untuk plugin parsers
[project.entry-points."bpmn_mp.parsers"]
bpmn = "bpmn_mp.parsers.bpmn_parser.plugin:Plugin"
xpdl = "bpmn_mp.parsers.xpdl_parser.plugin:Plugin"
xml =  "bpmn_mp.parsers.xml_parser.plugin:Plugin"
native = "bpmn_mp.parsers.native_parser.plugin:Plugin"
vdx = "bpmn_mp.parsers.vdx_parser.plugin:Plugin"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


# [project.urls]
# Homepage = "https://github.com/yourusername/bpmn-neo4j-lib"
# Repository = "https://github.com/yourusername/bpmn-neo4j-lib"
# Issues = "https://github.com/yourusername/bpmn-neo4j-lib/issues"




