[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bpmn-graph-transformation"
version = "0.1.1"
description = "Library for converting BPMN JSON to Cypher queries for Neo4j"
readme = "READMEpypi.md"
authors = [
  { name = "Kurnia Cahya Febryanto", email = "6025241065@student.its.ac.id" },
  { name = "Izzat Aji Androfaza", email = "business.aji2022@gmail.com" },
  { name = "Lalu Aldo wadagraprana", email = "lalualdo@gmail.com" },
  { name = "IIM Lab", email = "labiim@protonmail.com" },
]
requires-python = ">=3.8"
license = { text = "MIT" }

keywords = [
  "BPMN",
  "Neo4j",
  "Graph Database",
  "Business Process",
  "Process Mining",
  "BPMN 2.0",
  "Cypher",
  "XPDL",
  "Workflow",
  "Process Analytics"
]

# Dependency inti library (akan otomatis terinstall saat pip install)
dependencies = [
  "neo4j>=5.19.0",
  "dirtyjson>=1.0.8",
  "demjson3>=3.0.6",
  "jsonschema>=4.0.0",
  "requests>=2.31.0",
  "networkx>=3.3",
  "isort>=5.0.0",
  "mypy>=1.9.0",
  "mongomock>=4.1.2",
  "pymongo==4.5.0",
  "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "flake8"
]

[project.urls]
Documentation = "https://gitlab.iimlab.id/business-process/LIBRARY-BPMN_Graph_Transformation"
Source = "https://gitlab.iimlab.id/business-process/LIBRARY-BPMN_Graph_Transformation"
Homepage = "https://gitlab.iimlab.id/business-process/LIBRARY-BPMN_Graph_Transformation"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bpmn_neo4j.validators" = ["*.json"]
